tests/errors/semantic/blocking/REMOVE_SET_INCOMPATIBLE_TYPES_1.py
# Expecting an argument of the same type as the elements of the set
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {6, 5, 2}
b = 5j
a.remove(b)
